traceability-agent/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traceability-agent
  name: traceability-agent-deployment
  namespace: ml-services
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: traceability-agent
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: traceability-agent
    spec:
      containers:
      - args:
        - python -m src.interfaces.slack_bot
        command:
        - sh
        - -c
        image: bicontainer.azurecr.io/traceability_agent_v0.1:latest
        imagePullPolicy: Always
        name: traceability-agent-container
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: onboarding-az-mlpacr
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
