traceability-agent/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traceability-agent
  name: traceability-agent-service
  namespace: ml-services
spec:
  ports:
  - name: slack-bot
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: traceability-agent
  type: ClusterIP
